2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (eol_s): New symbol variable.
	(obj_init): New variable initialized.

	* lib.h (eol_s): Declared.

	* match.c (match_line): Implemented horizontal skip as and
	new eol directive.
	(match_lines): Vertical skip defers to horizontal skip if
	there is trailing material.

	* txr.1: Updated.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (flatten_helper): Function removed.
	(flatten): Recurse directly, using func_n1.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: fxed wrong word.

2011-10-06  Kaz Kylheku  <kaz@kylheku.com>

	Extending syntax to allow for @VAR and @(...) forms inside
	nested lists. This is in anticipation of future features.

	* lib.c (expr_s): New symbol variable.
	(obj_init): expr_s initialized.

	* lib.h (expr_s): Declared.

	* match.c (dest_bind): Now takes linenum. Tests for the meta-syntax
	denoted by the system symbols var_s and expr_s, and throws an
	error.
	(eval_form): Similar error checks added. Also, hack: do not add
	file and line number to an exception which begins with a '('
	character; just re-throw it. This suppresses duplicate line
	number addition when this throw occurs across some nestings.
	(match_files): Updated calls to dest_bind.

	* parser.l (yybadtoken): Handle new token kind, METAVAR and METAPAR.
	(grammar): Refactoring among patterns: TOK broken into
	SYM and NUM, NTOK introduced, unused NUM_END removed.
	Rule for @( producing METAPAR in nested state.

	* parser.y (METAVAR, METAPAR): New tokens.
	(meta_expr): New nonterminal.
	(expr): meta_expr and META_VAR productions handled.

2011-10-06  Kaz Kylheku  <kaz@kylheku.com>

	Renaming the currying combinators according to new scheme.

	* lib.c (bind2): Function renamed to curry_12_2.
	(bind2other): Function renamed to curry_12_1.
	(do_bind_2, do_bind2other): Helpers renamed likewise.
	(tree_find): Follows rename of bind2.

	* match.c (match_files): deffilter code follows bind2 rename
	to curry_12_2.
